@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3177 2019/07/31 19:36:41 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3178 2019/07/31 19:38:44 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5134,3 +5134,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-geoR to 1.7.5.2.1 [brook 2019-07-31]
 	Updated math/R-geoRglm to 0.9.11 [brook 2019-07-31]
 	Updated math/R-gss to 2.1.10 [brook 2019-07-31]
+	Updated math/R-gstat to 2.0.2 [brook 2019-07-31]
